# everly

./: .gitignore  CLAUDE.md  Cargo.toml  OPTIMIZATION.md  README.md  world_map.txt  world_map_floor1.txt
.cargo/: config.toml
.claude/: settings.json
assets/shaders/: temperature_diffusion.wgsl
docs/: README.md  actor-brain.md  actor-spawner.md  actor.md  add_new_tile.md  cell-occupancy.md  charge.md  chunk-overlay.md  corners.md  dispatch.md  field-interactions.md  game-log.md  hypermap.md  interactive-entities.md  leaderboard.md  level-persistence.md  main-menu.md  map-editor.md  map-generator.md  movement.md  pathfind-service.md  rendering-pipeline.md  temperature-diffusion.md  test-world.md  tile-fields.md  tilemap.md
levels/level_new_003/: actors.json  actors.yaml  camera.json  camera.yaml
scripts/: generate_world_map.py
src/: boxes.rs  camera.rs  floor_level.rs  game_hud.rs  ground.rs  hypermap.rs  hypermap_pathfind.rs  hypermap_world.rs  lib.rs  main.rs  map_edit.rs  map_selection.rs  rng.rs  sun.rs  world_map.rs
src/actor/: actor_name.rs  actor_pick.rs  black_bot.rs  charge.rs  dispatch.rs  genetics.rs  glitch_bot.rs  inspect.rs  mod.rs  movement.rs  resurrect.rs  selection_overlay.rs  snapshot.rs
src/edit/: actor_spawn.rs  map_edit.rs  map_selection.rs  mod.rs
src/hud/: actor_inspector.rs  game_hud.rs  game_log.rs  leaderboard.rs  mod.rs  overlays.rs  panel_anim.rs  perf_timings.rs  subtile_debug.rs
src/map/: cell_occupancy.rs  chunk_metadata.rs  chunk_overlay.rs  dirt.rs  dirt_overlay.rs  field_interactions.rs  floor_level.rs  hypermap.rs  (+14 more)
(+109 files in other folders)
