[package]
name = "everly"
version = "0.1.0"
edition = "2024"
description = "Everly — a 3D strategy-camera sandbox built with Bevy 0.18."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = "0.18.1"
bevy_water = "0.18.1"
futures-lite = "2.6.1"
pathfinding = "4.15"
names = "0.14"
rand = "0.8"
bytemuck = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
arc-swap = "1"
papaya = "0.2"

# Opt-in feature for blazing-fast iterative dev builds via Bevy's dynamic linking.
# Enable with: `cargo run --features dev`
[features]
default = []
dev = ["bevy/dynamic_linking"]

# Keep debug builds snappy by trimming Bevy's heavy compile-time work
# without sacrificing runtime performance.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
